ayaclub 1.0.0, 2017-10-30
------------------------
- Initial release